--- a/syles.css
+++ b/syles.css
@@ -1,25 +1,5 @@
-/* body {
-  padding: 1em;
+* {
+  padding: 0%;
   display: block;
+  margin: 0%;
 }
-
-header {
-  display: flex;
-}
-
-h1 {
-  margin-top: 50px;
-}
-
-.nav-ctn {
-  margin: 20px;
-  padding-left: 25%;
-}
-
-.nav-ctn a {
-  padding: 10px;
-}
-
-main {
-  display: flex;
-} */
