--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,63 @@
-/* html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-/* article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-} */
 * {
   box-sizing: border-box;
-  padding: 0%;
-  margin: 0%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   font-family: "Comic Sans", cursive;
 }
-header {
-  height: 200px;
-}
-header > h1 {
+
+.banner {
   background-size: cover;
   background-position: 50% 25%;
-  background-repeat: no-repeat;
   background-image: url(./assets/headerimg1.jpg);
-  height: 100%;
   color: white;
+  height: 250px;
 }
 
-nav {
-  display: inline-block;
-}
-
-div > h2 {
+div.subtitle {
+  position: relative;
   color: white;
   background-color: black;
   text-align: center;
   padding: 1%;
 }
 
-div {
-  display: inline;
+div.subtitle > figure > img {
+  position: absolute;
+  right: 8%;
+  top: -25px;
+}
+
+aside {
+  display: inline-block;
+  width: 150px;
+  margin-left: 5px;
+}
+
+nav > a {
+  display: block;
+  padding: 2%;
+  line-height: 2rem;
+}
+a.active {
+  text-decoration: none;
+  color: black;
+}
+
+main {
+  display: inline-block;
+  padding: 1%;
+  width: 85%;
+}
+article {
+  padding: 1rem;
+}
+
+article > h3 {
+  font-style: italic;
+}
+article > p {
+  text-indent: 1rem;
 }
