--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ main {
   padding-left: 150px;
   width: 85%;
 }
-/* article {
+article {
   padding: 1rem;
 }
 
@@ -71,7 +71,7 @@ article > h3 {
 }
 article > p {
   text-indent: 1rem;
-} */
+}
 section {
   display: inline-block;
 }
@@ -91,4 +91,61 @@ dd {
   display: block;
   margin-inline-start: 40px;
   margin-bottom: 25px;
+}
+
+#tablecontainer,
+#infocontainer {
+  display: flex;
+  justify-content: center;
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+table > caption {
+  background-color: black;
+  color: yellow;
+  padding: 0.5rem;
+}
+
+table > caption > small {
+  font-style: italic;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+table {
+  width: 85%;
+  margin: 3rem;
+}
+
+th {
+  padding: 0.5rem;
+  background-color: yellow;
+}
+
+td {
+  text-align: center;
+  padding: 5px;
+}
+
+#infocontainer {
+  flex-direction: column;
+  line-height: 2rem;
+  width: 85%;
+  margin: 7.5%;
+  margin-top: 3%;
+}
+
+div.textctn1 {
+  margin-bottom: 3rem;
+}
+
+.inlinetxt {
+  display: flex;
+  justify-content: space-between;
 }
